# game-sim

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.sh
include/: Bets.h  BettingRound.h  Board.h  Card.h  CardParser.h  Combinations.h  Deck.h  Equities.h  Equity.h  EquityCalculator.h  Game.h  Hand.h  HandEvaluator.h  HandRanker.h  HiddenCards.h  HoleCards.h  Player.h  PlayerId.h  PlayersInHand.h  Pot.h  Potential.h  Strength.h  TableCards.h  WinningProbabilities.h
include/cli/: Command.h  Connection.h  Context.h  Shell.h
include/game/: Board.h  Card.h  CardParser.h  Deck.h  Game.h  PlayerId.h  Pot.h  TableCards.h  WinningProbabilities.h
include/server/: Endpoint.h  GameId.h  Games.h  Handlers.h  HttpListener.h  Room.h  RoomId.h  Rooms.h  Server.h  Uri.h
include/uri/: Uri.h
src/: Bets.cpp  BettingRound.cpp  Board.cpp  Card.cpp  CardParser.cpp  Combinations.cpp  Deck.cpp  Equities.cpp  Equity.cpp  EquityCalculator.cpp  Game.cpp  Hand.cpp  HandEvaluator.cpp  HandRanker.cpp  HiddenCards.cpp  HoleCards.cpp  Player.cpp  PlayersInHand.cpp  PokerSim.cpp  Pot.cpp  Potential.cpp  Strength.cpp  TableCards.cpp  WinningProbabilities.cpp
src/cli/: CMakeLists.txt  Command.cpp  Connection.cpp  Main.cpp  Shell.cpp
src/game/: Board.cpp  CMakeLists.txt  Card.cpp  CardParser.cpp  PlayerId.cpp  PlayersInHand.cpp  Potential.cpp  Strength.cpp
src/server/: CMakeLists.txt  Endpoint.cpp  GameId.cpp  Games.cpp  Handlers.cpp  HttpListener.cpp  RoomId.cpp  Rooms.cpp  Server.cpp  Uri.cpp
src/uri/: CMakeLists.txt  Uri.cpp
test/: CardParserTest.cpp  FullGameTest.cpp  GameOddsTest.cpp  GameTest.cpp  HandEvaluatorTest.cpp  HandPotentialTest.cpp  HandRankerTest.cpp  HandTest.cpp  TestUtils.h
test/cli/: CMakeLists.txt  CreateConnection.cpp
test/game/: CMakeLists.txt  CardParserTest.cpp  FullGameTest.cpp  TestUtils.cpp
test/server/: CMakeLists.txt  GameLifecycle.cpp  UriTest.cpp
test/uri/: CMakeLists.txt  UriTest.cpp
